# AICAS_2025

./: Makefile  README.md  run.c  run_test
export/: export_qwen2_bin.py  export_token_bin.py
ohos/: CMakeLists.txt  Makefile  README.md  config.json  qwen_demo
ohos/demo/: main.cpp
ohos/include/: chat.h  config.h  math_utils.h  memory_manager.h  qwen_inference.h  run_state.h  sampler.h  tokenizer.h  transformer.h  transformer_weights.h
ohos/src/: chat.cpp  config.cpp  math_utils.cpp  memory_manager.cpp  qwen_inference.cpp  run_state.cpp  sampler.cpp  tokenizer.cpp  transformer.cpp  transformer_weights.cpp
